--- a/style.css
+++ b/style.css
@@ -2064,6 +2064,31 @@ body.ie .ibg img {
 .method-info__item p {
   margin-bottom: 0 !important; }
 
+.box-modal {
+  max-width: 450px;
+  width: 100%;
+  background-color: #f2f2f2;
+  padding: 45px 35px 30px 35px;
+  border-radius: 5px;
+  position: relative;
+}
+.box-modal_close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  cursor: pointer;
+}
+.box-modal h3 {
+  font-size: 23px;
+  margin-bottom: 35px;
+}
+.box-modal button {
+  margin-top: 20px;
+}
+
+
+
+
 @media (max-width: 1120px) {
   .container {
     padding: 0 10px; } }
