--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ Version: 1.0.1
 * {
   padding: 0px; 
   margin: 0px;
-  border: 0px; }  
+  border: 0px; }   
 
 *,
 *:before,
@@ -1422,7 +1422,9 @@ body.ie .ibg img {
     max-height: 80px;
     margin-right: 15px; }
     .result-block__img img {
-      max-width: 100%; }
+      max-width: 100%; 
+      height: 100%; }
+
 
 .footer {
   background: #1f1f1f; }
